--- a/templates/concerts/index.html.twig
+++ b/templates/concerts/index.html.twig
@@ -2,7 +2,6 @@
 
 {% block body %}
 
-
 <ul>
     {% if not app.user %}
         <li><a href="{{ path("register") }}">Inscription</a></li>
@@ -10,7 +9,9 @@
         <li><a href="{{ path("reservationsList", {'userId' : app.user.id}) }}">Mes réservations</a></li>
     {% endif %}
     <li><a href="{{ path("concertsList")}}">Liste des concerts</a></li>
-    <li><a href="{{ path("createConcert")}}">Créer un concert</a></li>
+    {% if app.user and app.user.role == 'Organizer' %}
+        <li><a href="{{ path("createConcert")}}">Créer un concert</a></li>
+    {% endif %}
 </ul>
 
 {% endblock %}
