--- a/templates/reservations/reservationsList.html.twig
+++ b/templates/reservations/reservationsList.html.twig
@@ -2,24 +2,24 @@
 
 {% block body %}
 
-<article>
+{% set submittedToken = csrf_token('cancel-reservation') %}
+
+<section>
  {% if reservations %}
-    {% for reservation in reservations %}
+     {% for reservation in reservations %}
+      <p><strong>Réservation n°{{ reservation.id }}</strong></p>
 
-        <p><strong>Réservation n°{{ reservation.id }}</strong></p>
-
-        <p><strong>Concert :</strong> {{ reservation.concert.name }} | <strong>Nombre de places réservées :</strong> {{ reservation.reservedPlaces }} 
-
-        <a href="{{ path('showConcert', {'id' : reservation.concert.id}) }}"><input type="button" value="Voir le concert"></a>
-        <a href="#"><input type="button" value="Annuler la réservation"></a></p>
-
-        <hr />
-
+      <p><strong>Concert :</strong> {{ reservation.concert.name }}<br />
+      <strong>Date :</strong> {{ reservation.concert.date | date('d/m/Y') }}<br />
+      <strong>Nombre de places réservées :</strong> {{ reservation.reservedPlaces }}</p>
+      <p><a href="{{ path('showConcert', {'id' : reservation.concert.id}) }}"><input type="button" value="Voir le concert"></a>
+      <a href="{{ path('confirmReservationCancel', {'reservationId': reservation.id, 'submittedToken': submittedToken}) }}"><input type="button" value="Annuler la réservation"></a></p>
+      <hr />
     {% endfor %}
  {% else %}
-    <p>Vous n'avez pas de réservation</p>    
-    <p><a href="{{ path('concertsList') }}">Voir les concerts</a></p>
+      <p>Vous n'avez pas de réservation</p>    
+      <p><a href="{{ path('concertsList') }}">Voir les concerts</a></p>
  {% endif %}
-</article>
+</section>
 
 {% endblock %}
