--- a/templates/concerts/showConcert.html.twig
+++ b/templates/concerts/showConcert.html.twig
@@ -3,45 +3,66 @@
 {% block body %}
 
 <section>
-    <p> Jour actuel : {{ currentDay}} / Mois actuel : {{ currentMonth }}  / Année actuelle : {{ currentYear }}</p>
-    <p> Jour concert : {{ concert.date | date('d')  }} / Mois concert : {{ concert.date | date('m')  }}  / Année concert : {{ concert.date | date('Y')  }}
-    <p>Date actuelle : {{ currentDate }} / Date Concert :  {{ concert.date | date('d-m-Y') }}</p>
+    {% if app.user.id == concert.organizer.id  %}
+        {% set submittedToken = csrf_token('concert-organizer') %}
+        <p><a href="{{ path('editConcert', {'id': concert.id, 'submittedToken': submittedToken}) }}"><input type="button" value="Modifier les informations"></a>
+        <a href="{{ path('changeConcertDate', {'id': concert.id, 'submittedToken': submittedToken}) }}"><input type="button" value="Reporter cet événement"></a>
+        <input type="button" value="Annuler cet événement"></p>
+    {% endif %}
+    
+    <p>Organisé par {{ concert.organizer.email }}</p>
 
     <p>{{ concert.description }}</p>
 
-    <p>Date : {{ concert.date | date('d/m/Y') }}</p>
+    <p>Date : {{ concert.date | date('d/m/Y') }} à {{ concert.date | date('h:i', 'Europe/Paris') }}</p>
 
     <p>Prix : {{ concert.price }}€ </p>
+    
+    {% if remainingPlaces != 0 %}
+        <p><strong>{{ remainingPlaces }}</strong>
+        {% if remainingPlaces > 1 %}places restantes 
+        {% elseif remainingPlaces == 1 %}place restante{% endif %}
+        </p>
+    {% else %}{% endif %}
 
-    <p>Capacité : {{ concert.maxPlaces }} places </p>
+
 </section>
 
 <section>
     <h2>Réservations</h2>
 
-    {% if concert.maxPlaces > concert.reservation  %}
-        {% if app.user %}
-            {{ form_start(reservationForm) }}
-                <p>{{ form_errors(reservationForm)}}
-                <p>{{ form_row(reservationForm.reservedPlaces, {
-                    'required': 'true',
-                    'label': 'Nombre de places : ',
-                    'attr': {
-                        'placeholder': 1,
-                        'min': 1, 
-                        'max': ' '
-                        } 
-                    })
-                }}</p>
-                    <input type="submit" value="Réserver">
-            {{ form_end(reservationForm) }}
-        {% else %}
-            <p>Veuillez vous connecter pour réserver</p>
-            <a href="{{ path("login") }}">Connexion</a>
-        {% endif %}
-    {% else %}
-        <p>Il n'y a plus de place disponible pour ce concert.</p>
+    {% if notEnoughPlaces != NULL %}
+        <strong><p>{{ notEnoughPlaces }}</strong></p>
     {% endif %}
+
+        {% if concert.date > date() %}
+            {% if concert.maxPlaces > concert.reservation  %}
+                {% if app.user %}
+                    {{ form_start(reservationForm) }}
+                        <p>{{ form_errors(reservationForm)}}
+                        <p>{{ form_row(reservationForm.reservedPlaces, {
+                            'required': 'true',
+                            'label': 'Nombre de places : ',
+                            'attr': {
+                                'placeholder': "Nombre de places",
+                                'min': 1, 
+                                'max': ' ',
+                                } 
+                            })
+                        }}</p>
+                            <input type="submit" value="Réserver">
+                    {{ form_end(reservationForm) }}
+                {% else %}
+                    <p>Veuillez vous connecter pour réserver</p>
+                    <a href="{{ path("login") }}">Connexion</a>
+                {% endif %}
+            {% else %}
+                <p><strong>Il n'y a plus de place disponible pour ce concert.</strong></p>
+            {% endif %}
+        {% else %}
+            <p>Les réservations pour cet événément sont closes.</p>
+        {% endif %}
+
 </section>
 
 {% endblock %}
